--- a/ng2-hello-world/src/app/app.component.html
+++ b/ng2-hello-world/src/app/app.component.html
@@ -1,3 +1,8 @@
 <h1>
   {{title}}
 </h1>
+
+
+<hello-world-1 myName="{{yourName}}" (onClickMe)="keepTrack($event)"></hello-world-1>
+
+<hello-world-1 myName="{{yourName}}" ></hello-world-1>
