--- a/ng2-hello-world/src/app/app.component.html
+++ b/ng2-hello-world/src/app/app.component.html
@@ -2,7 +2,9 @@
   {{title}}
 </h1>
 
+<router-outlet></router-outlet>
 
+<!--
 <hello-world-1 myName="{{yourName}}" (onClickMe)="keepTrack($event)"></hello-world-1>
 
-<hello-world-1 myName="{{yourName}}" ></hello-world-1>
+<hello-world-1 myName="{{yourName}}" ></hello-world-1>-->
